[gd_scene load_steps=5 format=3 uid="uid://duj2nu5khdahg"]

[ext_resource type="Script" uid="uid://cyqvu7rrqawey" path="res://puerta.gd" id="1_ylh6m"]
[ext_resource type="Texture2D" uid="uid://ddmg615pwd80r" path="res://Mapas/Elementos/Puerta/Puertacerrada.png" id="2_ylh6m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bm0a4"]
size = Vector2(173, 247)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylh6m"]
size = Vector2(282.083, 280.329)

[node name="DetectionArea" type="Area2D"]
collision_layer = 2
collision_mask = 5
collision_priority = 2.0
script = ExtResource("1_ylh6m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(680.5, 747.5)
shape = SubResource("RectangleShape2D_bm0a4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(681, 751)
scale = Vector2(0.866186, 0.689904)
texture = ExtResource("2_ylh6m")

[node name="InteractLabel" type="Label" parent="."]
offset_left = 404.0
offset_top = 474.0
offset_right = 507.0
offset_bottom = 570.0
text = "E"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(678, 747)
rotation = 0.0216104
shape = SubResource("RectangleShape2D_ylh6m")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
